// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`patches link fields > brokenLink > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "adcdf90",
        "isBroken": true,
        "lang": "nulla",
        "link_type": "Document",
        "tags": [
          "Convallis Posuere",
        ],
        "type": "vitae",
        "url": "https://ac.example",
      },
    },
  ],
}
`;

exports[`patches link fields > brokenLink > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "id": "9be9130",
            "isBroken": true,
            "lang": "faucibus",
            "link_type": "Document",
            "tags": [
              "Ultrices",
            ],
            "type": "egestas_integer",
            "url": "https://scelerisque.example",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "06ad9e3",
          "isBroken": true,
          "lang": "fringilla",
          "link_type": "Document",
          "tags": [],
          "type": "amet",
          "url": "https://nec.example",
        },
        "group": [
          {
            "field": {
              "id": "bd0255b",
              "isBroken": true,
              "lang": "neque",
              "link_type": "Document",
              "tags": [],
              "type": "lacus",
              "url": "https://cras.example",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link fields > brokenLink > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "id": "5ec2f4d",
            "isBroken": true,
            "lang": "enim,",
            "link_type": "Document",
            "tags": [],
            "type": "felis_donec",
            "url": "https://sem.example",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "31a1bd2",
          "isBroken": true,
          "lang": "ac",
          "link_type": "Document",
          "tags": [],
          "type": "enim_praesent",
          "url": "https://sit.example",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link fields > brokenLink > static zone 1`] = `
{
  "field": {
    "id": "2adafa9",
    "isBroken": true,
    "lang": "elementum",
    "link_type": "Document",
    "tags": [],
    "type": "aenean",
    "url": "https://volutpat.example",
  },
}
`;

exports[`patches link fields > existing > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-existing",
        "isBroken": false,
        "lang": "laoreet",
        "link_type": "Document",
        "tags": [],
        "type": "orci",
      },
    },
  ],
}
`;

exports[`patches link fields > existing > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "tortor,",
            "link_type": "Document",
            "tags": [
              "Risus In",
            ],
            "type": "dui",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "isBroken": false,
          "lang": "tortor,",
          "link_type": "Document",
          "tags": [
            "Risus In",
          ],
          "type": "dui",
        },
        "group": [
          {
            "field": {
              "id": "id-existing",
              "isBroken": false,
              "lang": "tortor,",
              "link_type": "Document",
              "tags": [
                "Risus In",
              ],
              "type": "dui",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link fields > existing > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "sapien",
            "link_type": "Document",
            "tags": [
              "Aenean",
            ],
            "type": "amet",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "isBroken": false,
          "lang": "sapien",
          "link_type": "Document",
          "tags": [
            "Aenean",
          ],
          "type": "amet",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link fields > existing > static zone 1`] = `
{
  "field": {
    "id": "id-existing",
    "isBroken": false,
    "lang": "eget",
    "link_type": "Document",
    "tags": [],
    "type": "phasellus",
  },
}
`;

exports[`patches link fields > lazyExisting > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-existing",
        "isBroken": false,
        "lang": "laoreet",
        "link_type": "Document",
        "tags": [],
        "type": "orci",
      },
    },
  ],
}
`;

exports[`patches link fields > lazyExisting > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "tortor,",
            "link_type": "Document",
            "tags": [
              "Risus In",
            ],
            "type": "dui",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "isBroken": false,
          "lang": "tortor,",
          "link_type": "Document",
          "tags": [
            "Risus In",
          ],
          "type": "dui",
        },
        "group": [
          {
            "field": {
              "id": "id-existing",
              "isBroken": false,
              "lang": "tortor,",
              "link_type": "Document",
              "tags": [
                "Risus In",
              ],
              "type": "dui",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link fields > lazyExisting > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "sapien",
            "link_type": "Document",
            "tags": [
              "Aenean",
            ],
            "type": "amet",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "isBroken": false,
          "lang": "sapien",
          "link_type": "Document",
          "tags": [
            "Aenean",
          ],
          "type": "amet",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link fields > lazyExisting > static zone 1`] = `
{
  "field": {
    "id": "id-existing",
    "isBroken": false,
    "lang": "eget",
    "link_type": "Document",
    "tags": [],
    "type": "phasellus",
  },
}
`;

exports[`patches link fields > lazyMigration > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-migration",
        "isBroken": false,
        "lang": "a",
        "link_type": "Document",
        "tags": [
          "Odio Eu",
        ],
        "type": "amet",
        "uid": "Non sodales neque",
      },
    },
  ],
}
`;

exports[`patches link fields > lazyMigration > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "id": "id-migration",
            "isBroken": false,
            "lang": "gravida",
            "link_type": "Document",
            "tags": [],
            "type": "leo",
            "uid": "Blandit volutpat maecenas",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-migration",
          "isBroken": false,
          "lang": "gravida",
          "link_type": "Document",
          "tags": [],
          "type": "leo",
          "uid": "Blandit volutpat maecenas",
        },
        "group": [
          {
            "field": {
              "id": "id-migration",
              "isBroken": false,
              "lang": "gravida",
              "link_type": "Document",
              "tags": [],
              "type": "leo",
              "uid": "Blandit volutpat maecenas",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link fields > lazyMigration > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "id": "id-migration",
            "isBroken": false,
            "lang": "ultrices",
            "link_type": "Document",
            "tags": [
              "Ipsum Consequat",
            ],
            "type": "eget",
            "uid": "Amet dictum sit",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-migration",
          "isBroken": false,
          "lang": "ultrices",
          "link_type": "Document",
          "tags": [
            "Ipsum Consequat",
          ],
          "type": "eget",
          "uid": "Amet dictum sit",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link fields > lazyMigration > static zone 1`] = `
{
  "field": {
    "id": "id-migration",
    "isBroken": false,
    "lang": "nisi,",
    "link_type": "Document",
    "tags": [],
    "type": "eros",
    "uid": "Scelerisque mauris pellentesque",
  },
}
`;

exports[`patches link fields > migration > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-migration",
        "isBroken": false,
        "lang": "a",
        "link_type": "Document",
        "tags": [
          "Odio Eu",
        ],
        "type": "amet",
        "uid": "Non sodales neque",
      },
    },
  ],
}
`;

exports[`patches link fields > migration > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "id": "id-migration",
            "isBroken": false,
            "lang": "gravida",
            "link_type": "Document",
            "tags": [],
            "type": "leo",
            "uid": "Blandit volutpat maecenas",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-migration",
          "isBroken": false,
          "lang": "gravida",
          "link_type": "Document",
          "tags": [],
          "type": "leo",
          "uid": "Blandit volutpat maecenas",
        },
        "group": [
          {
            "field": {
              "id": "id-migration",
              "isBroken": false,
              "lang": "gravida",
              "link_type": "Document",
              "tags": [],
              "type": "leo",
              "uid": "Blandit volutpat maecenas",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link fields > migration > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "id": "id-migration",
            "isBroken": false,
            "lang": "ultrices",
            "link_type": "Document",
            "tags": [
              "Ipsum Consequat",
            ],
            "type": "eget",
            "uid": "Amet dictum sit",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-migration",
          "isBroken": false,
          "lang": "ultrices",
          "link_type": "Document",
          "tags": [
            "Ipsum Consequat",
          ],
          "type": "eget",
          "uid": "Amet dictum sit",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link fields > migration > static zone 1`] = `
{
  "field": {
    "id": "id-migration",
    "isBroken": false,
    "lang": "nisi,",
    "link_type": "Document",
    "tags": [],
    "type": "eros",
    "uid": "Scelerisque mauris pellentesque",
  },
}
`;

exports[`patches link fields > migrationNoTags > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-migration",
        "isBroken": false,
        "lang": "a",
        "link_type": "Document",
        "tags": [],
        "type": "amet",
        "uid": "Non sodales neque",
      },
    },
  ],
}
`;

exports[`patches link fields > migrationNoTags > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "id": "id-migration",
            "isBroken": false,
            "lang": "gravida",
            "link_type": "Document",
            "tags": [],
            "type": "leo",
            "uid": "Blandit volutpat maecenas",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-migration",
          "isBroken": false,
          "lang": "gravida",
          "link_type": "Document",
          "tags": [],
          "type": "leo",
          "uid": "Blandit volutpat maecenas",
        },
        "group": [
          {
            "field": {
              "id": "id-migration",
              "isBroken": false,
              "lang": "gravida",
              "link_type": "Document",
              "tags": [],
              "type": "leo",
              "uid": "Blandit volutpat maecenas",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link fields > migrationNoTags > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "id": "id-migration",
            "isBroken": false,
            "lang": "ultrices",
            "link_type": "Document",
            "tags": [],
            "type": "eget",
            "uid": "Amet dictum sit",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-migration",
          "isBroken": false,
          "lang": "ultrices",
          "link_type": "Document",
          "tags": [],
          "type": "eget",
          "uid": "Amet dictum sit",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link fields > migrationNoTags > static zone 1`] = `
{
  "field": {
    "id": "id-migration",
    "isBroken": false,
    "lang": "nisi,",
    "link_type": "Document",
    "tags": [],
    "type": "eros",
    "uid": "Scelerisque mauris pellentesque",
  },
}
`;

exports[`patches link fields > otherRepositoryContentRelationship > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-migration",
        "isBroken": false,
        "lang": "nulla",
        "link_type": "Document",
        "tags": [
          "Convallis Posuere",
        ],
        "type": "vitae",
        "url": "https://ac.example",
      },
    },
  ],
}
`;

exports[`patches link fields > otherRepositoryContentRelationship > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "id": "id-migration",
            "isBroken": false,
            "lang": "faucibus",
            "link_type": "Document",
            "tags": [
              "Ultrices",
            ],
            "type": "egestas_integer",
            "url": "https://scelerisque.example",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-migration",
          "isBroken": false,
          "lang": "fringilla",
          "link_type": "Document",
          "tags": [],
          "type": "amet",
          "url": "https://nec.example",
        },
        "group": [
          {
            "field": {
              "id": "id-migration",
              "isBroken": false,
              "lang": "neque",
              "link_type": "Document",
              "tags": [],
              "type": "lacus",
              "url": "https://cras.example",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link fields > otherRepositoryContentRelationship > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "id": "id-migration",
            "isBroken": false,
            "lang": "enim,",
            "link_type": "Document",
            "tags": [],
            "type": "felis_donec",
            "url": "https://sem.example",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-migration",
          "isBroken": false,
          "lang": "ac",
          "link_type": "Document",
          "tags": [],
          "type": "enim_praesent",
          "url": "https://sit.example",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link fields > otherRepositoryContentRelationship > static zone 1`] = `
{
  "field": {
    "id": "id-migration",
    "isBroken": false,
    "lang": "elementum",
    "link_type": "Document",
    "tags": [],
    "type": "aenean",
    "url": "https://volutpat.example",
  },
}
`;

exports[`patches link fields > richTextLinkNode > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [
            {
              "end": 5,
              "start": 0,
              "type": "strong",
            },
            {
              "data": {
                "id": "id-existing",
                "isBroken": false,
                "lang": "laoreet",
                "link_type": "Document",
                "tags": [],
                "type": "orci",
              },
              "end": 5,
              "start": 0,
              "type": "hyperlink",
            },
          ],
          "text": "lorem",
          "type": "paragraph",
        },
      ],
    },
  ],
}
`;

exports[`patches link fields > richTextLinkNode > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "id": "id-existing",
                    "isBroken": false,
                    "lang": "tortor,",
                    "link_type": "Document",
                    "tags": [
                      "Risus In",
                    ],
                    "type": "dui",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "id": "id-existing",
                  "isBroken": false,
                  "lang": "tortor,",
                  "link_type": "Document",
                  "tags": [
                    "Risus In",
                  ],
                  "type": "dui",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [
                  {
                    "end": 5,
                    "start": 0,
                    "type": "strong",
                  },
                  {
                    "data": {
                      "id": "id-existing",
                      "isBroken": false,
                      "lang": "tortor,",
                      "link_type": "Document",
                      "tags": [
                        "Risus In",
                      ],
                      "type": "dui",
                    },
                    "end": 5,
                    "start": 0,
                    "type": "hyperlink",
                  },
                ],
                "text": "lorem",
                "type": "paragraph",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link fields > richTextLinkNode > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "id": "id-existing",
                    "isBroken": false,
                    "lang": "sapien",
                    "link_type": "Document",
                    "tags": [
                      "Aenean",
                    ],
                    "type": "amet",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "id": "id-existing",
                  "isBroken": false,
                  "lang": "sapien",
                  "link_type": "Document",
                  "tags": [
                    "Aenean",
                  ],
                  "type": "amet",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link fields > richTextLinkNode > static zone 1`] = `
{
  "field": [
    {
      "spans": [
        {
          "end": 5,
          "start": 0,
          "type": "strong",
        },
        {
          "data": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "eget",
            "link_type": "Document",
            "tags": [],
            "type": "phasellus",
          },
          "end": 5,
          "start": 0,
          "type": "hyperlink",
        },
      ],
      "text": "lorem",
      "type": "paragraph",
    },
  ],
}
`;

exports[`patches link fields > richTextNewImageNodeLink > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [],
          "text": "Nulla Aliquet Porttitor Lacus Luctus",
          "type": "heading2",
        },
        {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 0,
          },
          "id": "cdfdd322ca9",
          "linkTo": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "laoreet",
            "link_type": "Document",
            "tags": [],
            "type": "orci",
          },
          "type": "image",
          "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?w=6000&h=4000&fit=crop",
        },
      ],
    },
  ],
}
`;

exports[`patches link fields > richTextNewImageNodeLink > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Eu Mi",
              "type": "heading3",
            },
            {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 0,
              },
              "id": "bc31787853a",
              "linkTo": {
                "id": "id-existing",
                "isBroken": false,
                "lang": "tortor,",
                "link_type": "Document",
                "tags": [
                  "Risus In",
                ],
                "type": "dui",
              },
              "type": "image",
              "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Fringilla Phasellus Faucibus Scelerisque Eleifend Donec Pretium",
            "type": "heading3",
          },
          {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 0,
            },
            "id": "bc31787853a",
            "linkTo": {
              "id": "id-existing",
              "isBroken": false,
              "lang": "tortor,",
              "link_type": "Document",
              "tags": [
                "Risus In",
              ],
              "type": "dui",
            },
            "type": "image",
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [],
                "text": "Arcu",
                "type": "heading1",
              },
              {
                "alt": null,
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "transparent",
                  "x": 0,
                  "y": 0,
                  "zoom": 0,
                },
                "id": "bc31787853a",
                "linkTo": {
                  "id": "id-existing",
                  "isBroken": false,
                  "lang": "tortor,",
                  "link_type": "Document",
                  "tags": [
                    "Risus In",
                  ],
                  "type": "dui",
                },
                "type": "image",
                "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link fields > richTextNewImageNodeLink > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Habitasse platea dictumst quisque sagittis purus sit",
              "type": "o-list-item",
            },
            {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 0,
              },
              "id": "7963dc361cc",
              "linkTo": {
                "id": "id-existing",
                "isBroken": false,
                "lang": "sapien",
                "link_type": "Document",
                "tags": [
                  "Aenean",
                ],
                "type": "amet",
              },
              "type": "image",
              "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Ac Orci Phasellus Egestas Tellus",
            "type": "heading5",
          },
          {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 0,
            },
            "id": "7963dc361cc",
            "linkTo": {
              "id": "id-existing",
              "isBroken": false,
              "lang": "sapien",
              "link_type": "Document",
              "tags": [
                "Aenean",
              ],
              "type": "amet",
            },
            "type": "image",
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
          },
        ],
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link fields > richTextNewImageNodeLink > static zone 1`] = `
{
  "field": [
    {
      "spans": [],
      "text": "Elementum Integer",
      "type": "heading6",
    },
    {
      "alt": null,
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "transparent",
        "x": 0,
        "y": 0,
        "zoom": 0,
      },
      "id": "0bbad670dad",
      "linkTo": {
        "id": "id-existing",
        "isBroken": false,
        "lang": "eget",
        "link_type": "Document",
        "tags": [],
        "type": "phasellus",
      },
      "type": "image",
      "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?w=7372&h=4392&fit=crop",
    },
  ],
}
`;

exports[`patches link fields > richTextOtherReposiotryImageNodeLink > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [],
          "text": "Nulla Aliquet Porttitor Lacus Luctus",
          "type": "heading2",
        },
        {
          "alt": "Donec enim diam vulputate ut pharetra sit amet aliquam id diam",
          "copyright": null,
          "dimensions": {
            "height": 4000,
            "width": 6000,
          },
          "edit": {
            "background": "#7cfc26",
            "x": 2977,
            "y": -1163,
            "zoom": 1.0472585898934068,
          },
          "id": "e8d0985c099",
          "linkTo": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "laoreet",
            "link_type": "Document",
            "tags": [],
            "type": "orci",
          },
          "type": "image",
          "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b",
        },
      ],
    },
  ],
}
`;

exports[`patches link fields > richTextOtherReposiotryImageNodeLink > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Facilisis",
              "type": "heading3",
            },
            {
              "alt": "Nullam vehicula ipsum a arcu cursus vitae congue mauris rhoncus aenean vel elit scelerisque",
              "copyright": null,
              "dimensions": {
                "height": 4392,
                "width": 7372,
              },
              "edit": {
                "background": "#37ae3f",
                "x": -1505,
                "y": 902,
                "zoom": 1.8328975606320652,
              },
              "id": "3fc0dfa9fe9",
              "linkTo": {
                "id": "id-existing",
                "isBroken": false,
                "lang": "tortor,",
                "link_type": "Document",
                "tags": [
                  "Risus In",
                ],
                "type": "dui",
              },
              "type": "image",
              "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Fringilla Phasellus Faucibus Scelerisque Eleifend Donec Pretium",
            "type": "heading3",
          },
          {
            "alt": "Proin libero nunc consequat interdum varius",
            "copyright": null,
            "dimensions": {
              "height": 3036,
              "width": 4554,
            },
            "edit": {
              "background": "#904f4f",
              "x": 1462,
              "y": 1324,
              "zoom": 1.504938844941775,
            },
            "id": "3fc0dfa9fe9",
            "linkTo": {
              "id": "id-existing",
              "isBroken": false,
              "lang": "tortor,",
              "link_type": "Document",
              "tags": [
                "Risus In",
              ],
              "type": "dui",
            },
            "type": "image",
            "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [],
                "text": "Egestas Integer Eget Aliquet Nibh",
                "type": "heading5",
              },
              {
                "alt": "Arcu cursus vitae congue mauris",
                "copyright": null,
                "dimensions": {
                  "height": 4392,
                  "width": 7372,
                },
                "edit": {
                  "background": "#5f7a9b",
                  "x": -119,
                  "y": -2667,
                  "zoom": 1.9681315715350518,
                },
                "id": "3fc0dfa9fe9",
                "linkTo": {
                  "id": "id-existing",
                  "isBroken": false,
                  "lang": "tortor,",
                  "link_type": "Document",
                  "tags": [
                    "Risus In",
                  ],
                  "type": "dui",
                },
                "type": "image",
                "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link fields > richTextOtherReposiotryImageNodeLink > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Amet",
              "type": "heading5",
            },
            {
              "alt": "Auctor neque vitae tempus quam",
              "copyright": null,
              "dimensions": {
                "height": 1440,
                "width": 2560,
              },
              "edit": {
                "background": "#5bc5aa",
                "x": -1072,
                "y": -281,
                "zoom": 1.3767766101231744,
              },
              "id": "f70ca27104d",
              "linkTo": {
                "id": "id-existing",
                "isBroken": false,
                "lang": "sapien",
                "link_type": "Document",
                "tags": [
                  "Aenean",
                ],
                "type": "amet",
              },
              "type": "image",
              "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Ac Orci Phasellus Egestas Tellus",
            "type": "heading5",
          },
          {
            "alt": "Urna id volutpat lacus laoreet non curabitur gravida arcu ac tortor",
            "copyright": null,
            "dimensions": {
              "height": 3036,
              "width": 4554,
            },
            "edit": {
              "background": "#4860cb",
              "x": 280,
              "y": -379,
              "zoom": 1.2389796902982004,
            },
            "id": "f70ca27104d",
            "linkTo": {
              "id": "id-existing",
              "isBroken": false,
              "lang": "sapien",
              "link_type": "Document",
              "tags": [
                "Aenean",
              ],
              "type": "amet",
            },
            "type": "image",
            "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff",
          },
        ],
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link fields > richTextOtherReposiotryImageNodeLink > static zone 1`] = `
{
  "field": [
    {
      "spans": [],
      "text": "Elementum Integer",
      "type": "heading6",
    },
    {
      "alt": "Interdum velit euismod in pellentesque",
      "copyright": null,
      "dimensions": {
        "height": 4392,
        "width": 7372,
      },
      "edit": {
        "background": "#ab1d17",
        "x": 3605,
        "y": 860,
        "zoom": 1.9465488211593005,
      },
      "id": "04a95cc61c3",
      "linkTo": {
        "id": "id-existing",
        "isBroken": false,
        "lang": "eget",
        "link_type": "Document",
        "tags": [],
        "type": "phasellus",
      },
      "type": "image",
      "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5",
    },
  ],
}
`;
